--- a/.github/workflows/macos-release-build.yml
+++ b/.github/workflows/macos-release-build.yml
@@ -295,7 +295,7 @@ jobs:
             exit 1
           fi
 
-          version="$(sed -nE 's/^version\\s*=\\s*\"([^\"]+)\"/\\1/p' src-tauri/Cargo.toml | head -n 1)"
+          version="$(awk -F '\"' '/^version[[:space:]]*=/{print $2; exit}' src-tauri/Cargo.toml | tr -d '\r')"
           if [[ -z "$version" ]]; then
             echo "Could not resolve app version from src-tauri/Cargo.toml" >&2
             exit 1
@@ -349,3 +349,56 @@ jobs:
             release-assets/UnimozerNext_*_${{ matrix.arch }}.app.tar.gz
             release-assets/UnimozerNext_*_${{ matrix.arch }}.app.tar.gz.sig
             updater-manifests/latest-${{ matrix.updater_target }}.json
+
+      - name: Prune stale prerelease macOS assets
+        if: ${{ steps.release_meta.outputs.tag_name == 'updater-prerelease' }}
+        uses: actions/github-script@v7
+        env:
+          ARCH_SUFFIX: ${{ matrix.arch }}
+          UPDATER_TARGET: ${{ matrix.updater_target }}
+        with:
+          script: |
+            const fs = require("node:fs");
+            const cargo = fs.readFileSync("src-tauri/Cargo.toml", "utf8");
+            const versionMatch = cargo.match(/^version\s*=\s*"([^"]+)"/m);
+            if (!versionMatch) {
+              core.setFailed("Could not read version from src-tauri/Cargo.toml");
+              return;
+            }
+            const version = versionMatch[1];
+            const arch = process.env.ARCH_SUFFIX;
+            const updaterTarget = process.env.UPDATER_TARGET;
+            const keep = new Set([
+              `UnimozerNext_${version}_${arch}.app.tar.gz`,
+              `UnimozerNext_${version}_${arch}.app.tar.gz.sig`,
+              `UnimozerNext_${version}_${arch}.dmg`,
+              `latest-${updaterTarget}.json`
+            ]);
+
+            const stalePattern = new RegExp(
+              `^UnimozerNext_.*_${arch}\\.(app\\.tar\\.gz|app\\.tar\\.gz\\.sig|dmg)$`
+            );
+
+            const { owner, repo } = context.repo;
+            const release = await github.rest.repos.getReleaseByTag({
+              owner,
+              repo,
+              tag: "updater-prerelease"
+            });
+            const assets = await github.paginate(github.rest.repos.listReleaseAssets, {
+              owner,
+              repo,
+              release_id: release.data.id,
+              per_page: 100
+            });
+
+            for (const asset of assets) {
+              if (!stalePattern.test(asset.name)) continue;
+              if (keep.has(asset.name)) continue;
+              core.info(`Deleting stale macOS prerelease asset: ${asset.name}`);
+              await github.rest.repos.deleteReleaseAsset({
+                owner,
+                repo,
+                asset_id: asset.id
+              });
+            }
