--- a/.github/workflows/windows-release-build.yml
+++ b/.github/workflows/windows-release-build.yml
@@ -332,3 +332,50 @@ jobs:
             release-assets/UnimozerNext_*_x64-setup.msi.sig
             updater-manifests/latest-windows-x86_64-nsis.json
             updater-manifests/latest-windows-x86_64-msi.json
+
+      - name: Prune stale prerelease Windows assets
+        if: ${{ steps.release_meta.outputs.tag_name == 'updater-prerelease' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require("node:fs");
+            const cargo = fs.readFileSync("src-tauri/Cargo.toml", "utf8");
+            const versionMatch = cargo.match(/^version\s*=\s*"([^"]+)"/m);
+            if (!versionMatch) {
+              core.setFailed("Could not read version from src-tauri/Cargo.toml");
+              return;
+            }
+            const version = versionMatch[1];
+            const keep = new Set([
+              `UnimozerNext_${version}_x64-setup.exe`,
+              `UnimozerNext_${version}_x64-setup.exe.sig`,
+              `UnimozerNext_${version}_x64-setup.msi`,
+              `UnimozerNext_${version}_x64-setup.msi.sig`,
+              "latest-windows-x86_64-nsis.json",
+              "latest-windows-x86_64-msi.json"
+            ]);
+            const stalePattern = /^UnimozerNext_.*_x64-setup\.(exe|exe\.sig|msi|msi\.sig)$/;
+
+            const { owner, repo } = context.repo;
+            const release = await github.rest.repos.getReleaseByTag({
+              owner,
+              repo,
+              tag: "updater-prerelease"
+            });
+            const assets = await github.paginate(github.rest.repos.listReleaseAssets, {
+              owner,
+              repo,
+              release_id: release.data.id,
+              per_page: 100
+            });
+
+            for (const asset of assets) {
+              if (!stalePattern.test(asset.name)) continue;
+              if (keep.has(asset.name)) continue;
+              core.info(`Deleting stale Windows prerelease asset: ${asset.name}`);
+              await github.rest.repos.deleteReleaseAsset({
+                owner,
+                repo,
+                asset_id: asset.id
+              });
+            }
